# rask

./: .gitignore  Cargo.toml  README.md  list.rs
assets/: interprete.scm  matrix.scm  printer.scm  set-construct.scm  sort.scm  sprintf.scm  timer.scm  unification.scm  word-count.scm
benches/: benchmark.rs
src/: bootstrap.rs  lib.rs  list.rs  main.rs  parse.rs
src/exec/: apply.rs  eval.rs  mod.rs  util.rs
src/init/: mod.rs  operators.rs  stdbool.rs  stdlist.rs  stdmath.rs  stdmisc.rs  stdnum.rs  stdtype.rs  type_identification.rs
src/parse/: build.rs  lex.rs  mod.rs  split.rs  util.rs
