[package]
name = "rask"
version = "0.0.0"
authors = ["Vanille-N <neven.villani@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Toy Scheme implementation"
readme = "README.md"
repository = "https://github.com/Vanille-N/rask"
keywords = ["scheme", "interpreter"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
