[package]
name = "rask"
version = "0.1.3"
authors = ["Vanille-N <neven.villani@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Toy Scheme implementation"
readme = "README.md"
repository = "https://github.com/Vanille-N/rask"
keywords = ["scheme", "interpreter"]
include = ["src/**/*", "README.md"]

[dependencies]
chainmap = "0.1.*"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
path = "benches/benchmark.rs"
harness = false
